# project-f

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Readme.md  test.lispf
.github/workflows/: cmake-single-platform.yml
src/: main.cpp  test_runner.cpp  utils.cpp  utils.h
src/ast/: element.cpp  element.h  kind.h  span.cpp  span.h
src/evaluator/: control_flow.cpp  control_flow.h  error.cpp  error.h  evaluator.cpp  evaluator.h  expression.h  function.cpp  function.h  program.cpp  program.h  scope.cpp  scope.h
src/evaluator/expression/: body.cpp  break.cpp  call.cpp  cond.cpp  expression.cpp  func.cpp  lambda.cpp  parameters.cpp  prog.cpp  program.cpp  quote.cpp  return.cpp  setq.cpp  symbol.cpp  while.cpp
src/evaluator/function/: arithmetic.cpp  comparisons.cpp  evaluation.cpp  lists.cpp  logical.cpp  predicates.cpp
src/evaluator/user_defined/: func.cpp  lambda.cpp  user_defined.cpp
src/reader/: element.cpp  element.h  error.cpp  error.h  parser.cpp  parser.h  reader.cpp  reader.h  scanner.cpp  scanner.h  span.cpp  span.h  token.cpp  token.h
src/reader/error/: error.cpp  error.h
src/test_runner/: main.cpp  test_runner.cpp  test_runner.h
tests/: semantics.lispf  syntax.lispf  tests.lispf
tests/functions/: and.lispf  arithmetic.lispf  comparisons.lispf  cons.lispf  divide.lispf  double.lispf  equal.lispf  eval.lispf  greater.lispf  greatereq.lispf  head.lispf  isatom.lispf  isbool.lispf  isfunc.lispf  isint.lispf  islist.lispf  isnull.lispf  isreal.lispf  less.lispf  lesseq.lispf  lists.lispf  logical-side-effects.lispf  logical.lispf  minus.lispf  nonequal.lispf  not.lispf  or.lispf  plus.lispf  predicates.lispf  tail.lispf  times.lispf  xor.lispf
tests/semantic/: break-inside-prog.lispf  break-inside-while.lispf  cond.lispf  control.lispf  func-access-outer-scope.lispf  func-inside-prog.lispf  func-return-value.lispf  func.lispf  function-objects.lispf  functions.lispf  inner-var-shadows-outer.lispf  lambda-capturing.lispf  lambdas.lispf  prog-capturing.lispf  prog-global-variables.lispf  prog-local-variables.lispf  prog-return-from-func.lispf  prog-return-value.lispf  prog.lispf  quote.lispf  recursion.lispf  redefine-function.lispf  return-inside-func.lispf  return-terminates-program.lispf  while.lispf
tests/syntax/: comments.lispf  lists.fail.lispf  lists.lispf  numbers.fail.lispf  numbers.lispf  quote.fail.lispf  quote.lispf  symbols.fail.lispf  symbols.lispf
